[project]
name = "rll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arcade>=3.3.2",
    "gymnasium>=1.2.0",
    "ipython>=9.5.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "onnxscript>=0.4.0",
    "psutil>=7.0.0",
    "pygame>=2.6.1",
    "stable-baselines3>=2.7.0",
    "torch>=2.8.0",
    "wandb>=0.21.4",
]
